# ner_model

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
ner_model/model/: ckip_pipeline.py  model_util.py
ner_model/model/process/ckiplab_models/: driver.py  util.py
ner_model/utils/: text_cleaning.py  timeout.py
