[tool.poetry]
name = "text-preprocessing-ner"
version = "0.1.0"
description = "A text preprocessing and Named Entity Recognition (NER) pipeline for English and Chinese."
authors = ["Patty <patty@dailyview.tw>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
spacy = "^3.5"
ckip-transformers = "0.3.4"
gliner-spacy = "^0.0.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
